nested protocol support and ability to load classes from nested jar